# ml-agents-universe

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  build_nuitka.bat  create_dummy.py  docker-compose.yaml  pyproject.toml  requirements.txt  ruff.toml  run_desktop.py
.github/workflows/: ci.yml  codeql.yml  deploy.yml
agents/creative/: README.md
agents/cybersecurity/: README.md
agents/data_engineering/: README.md
agents/devops/: README.md
agents/economy/: README.md  requirements.txt
agents/education/: README.md  requirements.txt
agents/entertainment/: README.md  requirements.txt
agents/finance/: README.md  requirements.txt
agents/game_ai/: README.md
agents/healthcare/: README.md
agents/legal/: README.md
agents/mathematics/: README.md  requirements.txt
agents/nlp/: README.md  requirements.txt
agents/osint/: README.md
agents/productivity/: README.md
agents/science/: README.md  requirements.txt
api/: __init__.py  dependencies.py  gateway.py  limiter.py  orchestrator.py  router.py  schema.py  security.py
api/routes/: chat.py  omnichannel.py  ws_chat.py
configs/: global.yaml
configs/economy/: config.yaml
configs/education/: config.yaml
configs/entertainment/: config.yaml
configs/finance/: config.yaml
configs/mathematics/: config.yaml
configs/nlp/: config.yaml
configs/science/: config.yaml
data/: ml_agents.db
deployment/dockerfiles/: agent.Dockerfile  api_gateway.Dockerfile  base.Dockerfile
docs/runbooks/: incident_response.md
scripts/: create_dirs.py  create_p10_dirs.py  create_p4_dirs.py  create_p5_dirs.py  create_p6_dirs.py  create_p7_dirs.py  create_p8_dirs.py  create_p9_dirs.py  create_schemas_and_scripts.py  deploy.sh  download_datasets.py  health_check.sh  hf_dataset_registry.py  manage_keys.py  rollback.sh  run_agent.py  run_all_tests.ps1  run_all_tests.sh  run_server.py  scaffold_hf_datasets.py  scaffold_routers.py  test_api.py  test_local_agents.py  verify_phase1.py  verify_phase2.py  verify_phase3.py
shared/: __init__.py  requirements.txt
shared/adapters/: sender.py
shared/agent/: __init__.py  base.py  orchestrator.py
shared/data/: __init__.py  downloader.py  loaders.py  pipeline.py  quality.py  schema.py  validators.py  versioning.py
shared/db/: database.py  models.py
shared/events/: bus.py
shared/monitoring/: __init__.py  health.py  logger.py  metrics.py  tracing.py
shared/serving/: __init__.py  app.py  auth.py  middleware.py  model_cache.py  websockets.py
shared/utils/: __init__.py  config_loader.py  file_helpers.py  hotkey_manager.py  math_helpers.py  plugin_manager.py  startup_manager.py  text_processing.py  voice_manager.py
tests/: __init__.py  conftest.py
tests/api/: test_gateway.py
tests/integration/: test_data_pipeline_e2e.py  (+1 more)
ui/: __init__.py  controller.py  main_window.py  mic_button.py  plugin_store.py  setup_wizard.py  tray_icon.py
(+186 files in other folders)
